--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.16.7",
+    "simplex-noise": "^4.0.3",
     "tailwindcss": "^3.4.1"
   }
 }
